airflow proj/logs/dag_id=hypothesis1/run_id=manual__2023-05-13T18:56:42.235588+00:00/task_id=insert_data/attempt=1.log
[2023-05-13T18:56:53.426+0000] {taskinstance.py:1125} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: hypothesis1.insert_data manual__2023-05-13T18:56:42.235588+00:00 [queued]>
[2023-05-13T18:56:53.452+0000] {taskinstance.py:1125} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: hypothesis1.insert_data manual__2023-05-13T18:56:42.235588+00:00 [queued]>
[2023-05-13T18:56:53.454+0000] {taskinstance.py:1331} INFO - Starting attempt 1 of 1
[2023-05-13T18:56:53.499+0000] {taskinstance.py:1350} INFO - Executing <Task(PythonOperator): insert_data> on 2023-05-13 18:56:42.235588+00:00
[2023-05-13T18:56:53.512+0000] {standard_task_runner.py:57} INFO - Started process 326 to run task
[2023-05-13T18:56:53.522+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'hypothesis1', 'insert_data', 'manual__2023-05-13T18:56:42.235588+00:00', '--job-id', '9', '--raw', '--subdir', 'DAGS_FOLDER/dag_hypothesis1.py', '--cfg-path', '/tmp/tmpaxnw2upt']
[2023-05-13T18:56:53.530+0000] {standard_task_runner.py:85} INFO - Job 9: Subtask insert_data
[2023-05-13T18:56:53.653+0000] {task_command.py:410} INFO - Running <TaskInstance: hypothesis1.insert_data manual__2023-05-13T18:56:42.235588+00:00 [running]> on host 9a745d3878c0
[2023-05-13T18:56:53.950+0000] {taskinstance.py:1570} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='hypothesis1' AIRFLOW_CTX_TASK_ID='insert_data' AIRFLOW_CTX_EXECUTION_DATE='2023-05-13T18:56:42.235588+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-05-13T18:56:42.235588+00:00'
[2023-05-13T18:56:53.956+0000] {logging_mixin.py:149} INFO - Postgres connect success
[2023-05-13T18:56:53.990+0000] {base.py:73} INFO - Using connection ID 'qiberry' for task execution.
[2023-05-13T18:56:54.004+0000] {taskinstance.py:1847} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 181, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 198, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dag_hypothesis1.py", line 21, in insert_data_py
    src.insert_rows(table=table_name, rows=[row])
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 467, in insert_rows
    cur.execute(sql, values)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 1: ...room','bed','bed_height','bed_length','body_type','cabin','c...
                                                             ^

[2023-05-13T18:56:54.033+0000] {taskinstance.py:1373} INFO - Marking task as FAILED. dag_id=hypothesis1, task_id=insert_data, execution_date=20230513T185642, start_date=20230513T185653, end_date=20230513T185654
[2023-05-13T18:56:54.069+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 9 for task insert_data (INSERT has more expressions than target columns
LINE 1: ...room','bed','bed_height','bed_length','body_type','cabin','c...
                                                             ^
; 326)
[2023-05-13T18:56:54.097+0000] {local_task_job_runner.py:232} INFO - Task exited with return code 1
[2023-05-13T18:56:54.133+0000] {taskinstance.py:2674} INFO - 0 downstream tasks scheduled from follow-on schedule check
